--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,13 @@
 body {
+  margin-top: 50px;
   background-color: lightblue;
+}
+
+#invalid-message {
+  display: none;
+  color: red;
+}
+
+#day {
+  font-weight: bold;
 }
